syntax = "proto3";

package order;

import "order_commons.proto";

option java_multiple_files = true;
option java_package = "com.hts.generated.grpc";
option java_outer_classname = "OrderProto";

// 주문 요청
message PlaceOrderRequest {
  int64 account_id = 1;      // 계좌 ID
  string idempotency_key = 2;  // 멱등성 키 (UUID, 필수)
  string symbol = 3;           // 종목 코드
  Side side = 4;               // 매수/매도
  OrderType order_type = 5;    // 주문 타입
  int64 quantity = 6;          // 수량
  int64 price = 7;             // 가격 (시장가는 0)
  TimeInForce time_in_force = 8; // 유효기간
}

// 주문 취소 요청
message CancelOrderRequest {
  int64 account_id = 1;      // 계좌 ID
  string idempotency_key = 2;  // 멱등성 키 (UUID, 필수)
  string symbol = 3;         // 종목 코드
  int64 order_id = 4;          // 주문 ID
}

//  주문 접수 응답
message OrderResponse {
  int64 order_id = 1;          // 주문 ID
  OrderStatus status = 2;      // 주문 상태
  string message = 3;          // 메시지
  int64 timestamp = 4;         // 타임스탬프 (epoch millis)
}

service OrderService {
  rpc PlaceOrder(PlaceOrderRequest) returns (OrderResponse);
  rpc CancelOrder(CancelOrderRequest) returns (OrderResponse);
}
